# cloud-on-k8s

./: .gitignore  .golangci.yml  BUILD.bazel  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile-ubi  Dockerfile.ci  Dockerfile.ubi  Gopkg.toml  Jenkinsfile  Makefile  NOTICE.txt  PROJECT  README.md  VERSION  WORKSPACE  all-in-one.yaml  catalog-info.yaml  dev-setup.md  drivah.toml.sh  e2e-tests-local.json  e2e-tests.xml  gen-drivah.toml.sh  go.mod  go.sum  index.yaml  integration-tests.xml  kibana.asciidoc  main.go  remote.md  unit-tests.xml
operators/cmd/: BUILD.bazel  main.go
operators/cmd/cert-initializer/: README.md  check.go  check_test.go  config.go  files.go  files_test.go  initializer.go  main.go  server.go  server_test.go
operators/cmd/certificate-initializer/: main.go
operators/cmd/cli/: main.go
operators/cmd/cli/license/: license.go  license_test.go  types.go
operators/cmd/keystore-updater/: config.go  keystore-updater.go  main.go
operators/cmd/keystore-updater/cmd/: main.go
operators/cmd/license-initializer/: BUILD.bazel  main.go  main_test.go
operators/cmd/license-initializer/testdata/: expected.src
operators/cmd/manager/: BUILD.bazel  main.go  main_test.go
operators/cmd/process-manager/: BUILD.bazel  README.md  config.go  controller.go  flags.go  main.go  manager.go  process.go  reaper.go  server.go
operators/cmd/process-manager/test/: Dockerfile  Makefile  tests.sh  typescript
operators/cmd/process-manager/tests/: Dockerfile  Makefile  tests.sh
operators/cmd/snapshotter/: main.go
operators/pkg/about/: BUILD.bazel  base.go  info.go  info_test.go
operators/pkg/apis/: BUILD.bazel  addtoscheme_apm_v1alpha1.go  addtoscheme_associations_v1alpha1.go  addtoscheme_common_v1alpha1.go  addtoscheme_deployments_v1alpha1.go  addtoscheme_elasticsearch_v1alpha1.go  addtoscheme_kibana_v1alpha1.go  apis.go
operators/pkg/apis/apm/: BUILD.bazel
operators/pkg/apis/associations/: BUILD.bazel
operators/pkg/apis/common/: BUILD.bazel  group.go
operators/pkg/apis/deployments/: group.go
operators/pkg/apis/elasticsearch/: BUILD.bazel  group.go
operators/pkg/apis/kibana/: BUILD.bazel  group.go
operators/pkg/controller/: BUILD.bazel  add_apmserver.go  add_apmserverelasticsearchassociation.go  add_association.go  add_elasticsearch.go  add_kibana.go  add_license.go  add_remotecluster.go  add_stack.go  controller.go
operators/pkg/controller/apmserver/: BUILD.bazel  apmserver_controller.go  apmserver_controller_suite_test.go  apmserver_controller_test.go  deployment.go  deployment_control.go  labels.go  pod.go  pod_test.go  services.go  state.go
operators/pkg/controller/apmserverelasticsearchassociation/: BUILD.bazel  apmserverelasticsearchassociation_controller.go  apmserverelasticsearchassociation_controller_integration_test.go  apmserverelasticsearchassociation_controller_suite_test.go  apmserverelasticsearchassociation_controller_test.go  labels.go  user.go  user_test.go
operators/pkg/controller/association/: association_controller.go  association_controller_integration_test.go  association_controller_suite_test.go  association_controller_test.go  labels.go  user.go  user_test.go  watch.go
operators/pkg/controller/common/: BUILD.bazel  int.go  labels.go  labels_test.go  pause.go  pause_test.go  service.go  service_control.go  service_control_test.go  service_test.go  stack.go  stack_test.go
operators/pkg/controller/elasticsearch/: BUILD.bazel  dynamic_watches.go  elasticsearch_controller.go  elasticsearch_controller_suite_test.go  elasticsearch_controller_test.go
operators/pkg/controller/kibana/: BUILD.bazel  deployment.go  deployment_control.go  deployment_control_test.go  deployment_test.go  driver.go  driver_test.go  kibana_controller.go  kibana_controller_suite_test.go  kibana_controller_test.go  labels.go  pod.go  pod_test.go  services.go  state.go
operators/pkg/controller/kibanaassociation/: BUILD.bazel  association_controller.go  association_controller_integration_test.go  association_controller_suite_test.go  association_controller_test.go  ca.go  ca_test.go  labels.go  user.go  user_test.go  watch.go
operators/pkg/controller/license/: BUILD.bazel  labels.go  license_controller.go  license_controller_integration_test.go  license_controller_suite_test.go  license_controller_test.go  list.go  list_test.go  name.go
operators/pkg/controller/remotecluster/: BUILD.bazel  associations.go  associations_test.go  driver_incluster.go  driver_incluster_test.go  finalizers.go  finalizers_test.go  labels.go  remotecluster_controller.go  remotecluster_controller_integration_test.go  remotecluster_controller_suite_test.go  watches.go  watches_test.go
operators/pkg/controller/stack/: stack_controller.go  stack_controller_suite_test.go  stack_controller_test.go
operators/pkg/dev/portforward/: BUILD.bazel  dialer.go  dialer_test.go  doc.go  forwarder_store.go  pod_forwarder.go  pod_forwarder_test.go  service_forwarder.go  service_forwarder_test.go
operators/pkg/utils/diff/: BUILD.bazel  diff.go
operators/pkg/utils/fs/: BUILD.bazel  cache.go  cache_test.go  periodic.go  periodic_exec.go  periodic_exec_test.go  periodic_test.go  watch.go  watch_test.go
operators/pkg/utils/k8s/: BUILD.bazel  client.go  client_test.go  introspect.go  introspect_test.go  k8sutils.go  k8sutils_test.go
operators/pkg/utils/retry/: BUILD.bazel  retry_test.go
operators/pkg/utils/set/: BUILD.bazel  set.go  set_test.go
operators/pkg/utils/stringsutil/: BUILD.bazel  strings.go  strings_test.go
operators/pkg/utils/test/: BUILD.bazel  integration.go  reconcile.go  retry.go  time.go  trial.go
operators/pkg/webhook/: BUILD.bazel  add_validations.go  params.go  server.go  webhook.go
operators/pkg/webhook/elasticsearch/: BUILD.bazel  (+7 more)
operators/test/e2e/: BUILD.bazel  Dockerfile  apm_es_kibana_sample_test.go  apm_sample_test.go  failure_test.go  keystore_test.go  license_test.go  mutation_pvc_test.go  mutation_test.go  restart_test.go  run.sh  sample_es_kb_apm_test.go  sample_es_kb_test.go  sample_test.go  smoke_test.go  telemetry_test.go  volume_test.go
(+5291 files in other folders)
