load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/elastic/cloud-on-k8s/operators/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//operators/cmd/manager:go_default_library",
        "//operators/pkg/dev:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth/gcp:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/runtime/log:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
