load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/elastic/cloud-on-k8s/operators/cmd/license-initializer",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)

go_binary(
    name = "license-initializer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
