load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "add_apmserver.go",
        "add_apmserverelasticsearchassociation.go",
        "add_association.go",
        "add_elasticsearch.go",
        "add_kibana.go",
        "add_license.go",
        "add_remotecluster.go",
        "controller.go",
    ],
    importpath = "github.com/elastic/cloud-on-k8s/operators/pkg/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//operators/pkg/controller/apmserver:go_default_library",
        "//operators/pkg/controller/apmserverelasticsearchassociation:go_default_library",
        "//operators/pkg/controller/common/operator:go_default_library",
        "//operators/pkg/controller/elasticsearch:go_default_library",
        "//operators/pkg/controller/kibana:go_default_library",
        "//operators/pkg/controller/kibanaassociation:go_default_library",
        "//operators/pkg/controller/license:go_default_library",
        "//operators/pkg/controller/license/trial:go_default_library",
        "//operators/pkg/controller/remotecluster:go_default_library",
        "//operators/pkg/utils/stringsutil:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
    ],
)
