load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "apm_es_kibana_sample_test.go",
        "failure_test.go",
        "keystore_test.go",
        "license_test.go",
        "mutation_test.go",
        "restart_test.go",
        "sample_test.go",
        "smoke_test.go",
        "telemetry_test.go",
        "volume_test.go",
    ],
    deps = [
        "//operators/pkg/about:go_default_library",
        "//operators/pkg/apis/elasticsearch/v1alpha1:go_default_library",
        "//operators/pkg/apis/kibana/v1alpha1:go_default_library",
        "//operators/pkg/controller/common/license:go_default_library",
        "//operators/pkg/controller/elasticsearch/client:go_default_library",
        "//operators/pkg/controller/elasticsearch/label:go_default_library",
        "//operators/pkg/controller/elasticsearch/name:go_default_library",
        "//operators/pkg/controller/elasticsearch/restart:go_default_library",
        "//operators/pkg/controller/kibana/name:go_default_library",
        "//operators/pkg/utils/k8s:go_default_library",
        "//operators/test/e2e/apm:go_default_library",
        "//operators/test/e2e/helpers:go_default_library",
        "//operators/test/e2e/params:go_default_library",
        "//operators/test/e2e/stack:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_api//apps/v1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_apimachinery//pkg/util/yaml:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
    ],
)
