load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "apmserverelasticsearchassociation_controller.go",
        "labels.go",
        "user.go",
    ],
    importpath = "github.com/elastic/cloud-on-k8s/operators/pkg/controller/apmserverelasticsearchassociation",
    visibility = ["//visibility:public"],
    deps = [
        "//operators/pkg/apis/apm/v1alpha1:go_default_library",
        "//operators/pkg/apis/common/v1alpha1:go_default_library",
        "//operators/pkg/apis/elasticsearch/v1alpha1:go_default_library",
        "//operators/pkg/controller/apmserver:go_default_library",
        "//operators/pkg/controller/common:go_default_library",
        "//operators/pkg/controller/common/finalizer:go_default_library",
        "//operators/pkg/controller/common/operator:go_default_library",
        "//operators/pkg/controller/common/reconciler:go_default_library",
        "//operators/pkg/controller/common/user:go_default_library",
        "//operators/pkg/controller/common/watches:go_default_library",
        "//operators/pkg/controller/elasticsearch/certificates/http:go_default_library",
        "//operators/pkg/controller/elasticsearch/label:go_default_library",
        "//operators/pkg/controller/elasticsearch/services:go_default_library",
        "//operators/pkg/utils/k8s:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_client_go//tools/record:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/handler:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/runtime/log:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/source:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "apmserverelasticsearchassociation_controller_test.go",
        "user_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//operators/pkg/apis/apm/v1alpha1:go_default_library",
        "//operators/pkg/apis/associations/v1alpha1:go_default_library",
        "//operators/pkg/apis/common/v1alpha1:go_default_library",
        "//operators/pkg/apis/elasticsearch/v1alpha1:go_default_library",
        "//operators/pkg/controller/common:go_default_library",
        "//operators/pkg/controller/common/user:go_default_library",
        "//operators/pkg/controller/elasticsearch/label:go_default_library",
        "//operators/pkg/controller/kibanaassociation:go_default_library",
        "//operators/pkg/utils/k8s:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake:go_default_library",
    ],
)
