load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["elasticsearch_controller.go"],
    importpath = "github.com/elastic/cloud-on-k8s/operators/pkg/controller/elasticsearch",
    visibility = ["//visibility:public"],
    deps = [
        "//operators/pkg/apis/elasticsearch/v1alpha1:go_default_library",
        "//operators/pkg/controller/common:go_default_library",
        "//operators/pkg/controller/common/finalizer:go_default_library",
        "//operators/pkg/controller/common/operator:go_default_library",
        "//operators/pkg/controller/common/reconciler:go_default_library",
        "//operators/pkg/controller/common/version:go_default_library",
        "//operators/pkg/controller/common/watches:go_default_library",
        "//operators/pkg/controller/elasticsearch/certificates/http:go_default_library",
        "//operators/pkg/controller/elasticsearch/driver:go_default_library",
        "//operators/pkg/controller/elasticsearch/label:go_default_library",
        "//operators/pkg/controller/elasticsearch/observer:go_default_library",
        "//operators/pkg/controller/elasticsearch/reconcile:go_default_library",
        "//operators/pkg/controller/elasticsearch/settings:go_default_library",
        "//operators/pkg/controller/elasticsearch/validation:go_default_library",
        "//operators/pkg/utils/k8s:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_client_go//tools/record:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/handler:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/runtime/log:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/source:go_default_library",
    ],
)
