load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "deployment_control.go",
        "driver.go",
        "kibana_controller.go",
        "services.go",
        "state.go",
    ],
    importpath = "github.com/elastic/cloud-on-k8s/operators/pkg/controller/kibana",
    visibility = ["//visibility:public"],
    deps = [
        "//operators/pkg/about:go_default_library",
        "//operators/pkg/apis/kibana/v1alpha1:go_default_library",
        "//operators/pkg/controller/common:go_default_library",
        "//operators/pkg/controller/common/certificates:go_default_library",
        "//operators/pkg/controller/common/defaults:go_default_library",
        "//operators/pkg/controller/common/events:go_default_library",
        "//operators/pkg/controller/common/finalizer:go_default_library",
        "//operators/pkg/controller/common/hash:go_default_library",
        "//operators/pkg/controller/common/operator:go_default_library",
        "//operators/pkg/controller/common/reconciler:go_default_library",
        "//operators/pkg/controller/common/settings:go_default_library",
        "//operators/pkg/controller/common/version:go_default_library",
        "//operators/pkg/controller/common/watches:go_default_library",
        "//operators/pkg/controller/kibana/config:go_default_library",
        "//operators/pkg/controller/kibana/es:go_default_library",
        "//operators/pkg/controller/kibana/label:go_default_library",
        "//operators/pkg/controller/kibana/name:go_default_library",
        "//operators/pkg/controller/kibana/pod:go_default_library",
        "//operators/pkg/controller/kibana/securesettings:go_default_library",
        "//operators/pkg/controller/kibana/version/version6:go_default_library",
        "//operators/pkg/controller/kibana/version/version7:go_default_library",
        "//operators/pkg/utils/k8s:go_default_library",
        "@io_k8s_api//apps/v1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_client_go//tools/record:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/handler:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/runtime/log:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/source:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "deployment_control_test.go",
        "driver_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//operators/pkg/apis/common/v1alpha1:go_default_library",
        "//operators/pkg/apis/kibana/v1alpha1:go_default_library",
        "//operators/pkg/controller/common/certificates:go_default_library",
        "//operators/pkg/controller/common/version:go_default_library",
        "//operators/pkg/controller/common/watches:go_default_library",
        "//operators/pkg/controller/kibana/volume:go_default_library",
        "//operators/pkg/utils/k8s:go_default_library",
        "@com_github_go_test_deep//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@io_k8s_api//apps/v1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/util/intstr:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_client_go//tools/record:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake:go_default_library",
    ],
)
