load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["diff.go"],
    importpath = "github.com/elastic/cloud-on-k8s/operators/pkg/utils/diff",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
    ],
)
