load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cache.go",
        "periodic.go",
        "watch.go",
    ],
    importpath = "github.com/elastic/cloud-on-k8s/operators/pkg/utils/fs",
    visibility = ["//visibility:public"],
    deps = ["@io_k8s_sigs_controller_runtime//pkg/runtime/log:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["periodic_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//require:go_default_library"],
)
