load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["retry.go"],
    importpath = "github.com/elastic/cloud-on-k8s/operators/pkg/utils/retry",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["retry_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
