load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "integration.go",
        "retry.go",
    ],
    importpath = "github.com/elastic/cloud-on-k8s/operators/pkg/utils/test",
    visibility = ["//visibility:public"],
    deps = [
        "//operators/pkg/apis:go_default_library",
        "//operators/pkg/controller/common/operator:go_default_library",
        "//operators/pkg/utils/k8s:go_default_library",
        "//operators/pkg/utils/retry:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/envtest:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/runtime/log:go_default_library",
    ],
)
