load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["handler.go"],
    importpath = "github.com/elastic/cloud-on-k8s/operators/pkg/webhook/license",
    visibility = ["//visibility:public"],
    deps = [
        "//operators/pkg/controller/common/validation:go_default_library",
        "//operators/pkg/controller/license/validation:go_default_library",
        "//operators/pkg/utils/k8s:go_default_library",
        "@io_k8s_api//admission/v1beta1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/runtime/inject:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/runtime/log:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/webhook/admission:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/webhook/admission/types:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["handler_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//operators/pkg/apis:go_default_library",
        "//operators/pkg/controller/common/license:go_default_library",
        "//operators/pkg/controller/license/validation:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@io_k8s_api//admission/v1beta1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/webhook/admission:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/webhook/admission/types:go_default_library",
    ],
)
